name:                costflow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akru/costflow#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) Alexander Krupenkin
category:            Economics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Economics.Analysis.OHLC
                     , Economics.Analysis.Indicator.MA
                     , Economics.Analysis.Indicator.MACD
                     , Economics.Analysis.Indicator.Stochastic
                     , Economics.Analysis.Indicator.KeltnerChannel
                     , Economics.Analysis.Indicator.BollingerBands
  build-depends:       base >= 4.7 && < 5, vector, time
  default-language:    Haskell2010

test-suite costflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , costflow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akru/costflow
